--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@maticnetwork/dagger": "^0.2.0",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.20",
     "web3": "^1.3.0"
   }
 }
